...
            color: Colors.white,
          ),
        ),
        
        const SizedBox(width: 8),
        
        // "Treats" label
        const Text(
          'Treats',
          style: TextStyle(
            fontFamily: 'Poppins',
            fontSize: 20,
            fontWeight: FontWeight.w600,
...
